# e-melder-gui

./: Cargo.toml  README.md
lang/: de.json  en.json
src/: athlete-format  club-format  configs.rs  main.rs  sender-format  tournament-format  tournament_info.rs  utils.rs
src/ui/: administrative.rs  app.rs  mod.rs  registering.rs  usage.rs
