[package]
name = "e-melder-gui"
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
eframe = { version = "0.27.1", features = ["wgpu"] }
egui = { version = "0.27.1", features = ["accesskit"] }
egui_extras = { version = "0.27.1", features = ["chrono"] }
home = "0.5.9"
open = "5.1.2"
reqwest = { version = "0.12.2", features = ["blocking"] }
rfd = "0.14.1"
serde_json = "1.0.114"

[features]
debugging = []
unstable = []
