[package]
name = "e-melder-gui"
version = "3.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
eframe = { version = "0.31.0", features = ["wgpu"] }
egui = { version = "0.31.0", features = ["accesskit"] }
egui_extras = { version = "0.31.0", features = ["chrono"] }
enum-map = "2.7.3"
home = "0.5.9"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
notify-rust = "4.11.1"
open = "5.1.2"
reqwest = { version = "0.12.2", features = ["blocking"] }
rfd = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.114"
textdistance = "1.1.1"

[features]
debugging = []
unstable = []
