[package]
name = "e-melder-gui"
version = "4.5.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
enum-map = "2.7.3"
home = "0.5.9"
log = "0.4.22"
log4rs = "1.3.0"
notify-rust = "4.11.1"
reqwest = { version = "0.12.2", features = ["blocking"] }
rfd = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.114"
textdistance = "1.1.1"
open = "5.3.2"

[features]
unstable = []

[target.'cfg(windows)'.dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = [ "a11y", "winit", "wgpu" ] }

[target.'cfg(unix)'.dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = [ "a11y", "winit", "wayland", "wgpu" ] }